--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.18.2",
     "http-errors": "~1.6.3",
     "mariadb": "^3.4.5",
+    "morgan": "^1.10.1",
     "mysql2": "^3.16.0",
     "sequelize": "^6.37.7"
   }
